# 276-phase2

./: .gitmodules  cov.xml  pyproject.toml
.github/workflows/: coverage-reporter.yml  python-app.yml
src/: country.py  main.py
src/game/: daily.py  game.py  game_ui.py  leaderboard_ui.py  survival.py  survival_ui.py
src/local_repos/: auth.py  friends.py  stats.py  users.py
src/phase2/: account_ui.py  country.py  friends.py  leaderboard.py  round.py  statistics.py
tests/: test_account_ui.py  test_country.py  test_daily.py  test_game_ui.py  test_leaderboard.py  test_leaderboard_ui.py  test_statistics.py  test_survival.py  test_survival_ui.py
