[project]
name = "phase2"
version = "0.0.1"
authors = [
  { name="Isaac Liu", email="itl3@sfu.ca" },
  { name="Sam McGarry", email="sma256@sfu.ca" },
  { name="Jun Yi Fan", email="jyf5@sfu.ca" },
  { name="Ben Samy", email="bsa125@sfu.ca" },
  { name="Ravneet Kaur", email="" },
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
     "sqlalchemy>=2.0.0",
    "countryinfo>=0.1.2",
    "nicegui>=3.3.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "fastapi>=0.122.0",
]


[tool.coverage.run]
source = [
    "./src"
]

omit = [
    "./test"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
asyncio_mode = "auto"
main_file = "src/main.py"
addopts = "-p nicegui.testing.user_plugin"
markers = ["noautofixt"]